--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <br>
         <br>
         <br>
-        </p><h2>rpicam v0</h2></p>
+        <p><h2>rpicam v0</h2></p>
         <br>
         <p><code class="language-bash" data-lang="bash">git clone https://github.com/johannlo2013/picamera.git | echo "cd / | cd /home/mashedpotatoes/picamera | python3 init.py" > ~/Desktop/init.sh</span></code></p>
     </body>
