--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title></title>
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
-            p {
+            p, h2 {
                 text-align: center;
                 font-family: 'Inter';
             }
@@ -15,7 +15,7 @@
         <br>
         <br>
         <br>
-        <p><h2>rpicam v0</h2></p>
+        <h2>rpicam v0</h2>
         <br>
         <p><code class="language-bash" data-lang="bash">git clone https://github.com/johannlo2013/picamera.git | echo "cd / | cd /home/mashedpotatoes/picamera | python3 init.py" > ~/Desktop/init.sh</span></code></p>
     </body>
