--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
                 text-align: center;
                 font-family: 'Inter';
             }
+            pre {
+                margin: 0 0 1em 0;
+                background: rgba(0, 0, 0, 0.3);
+                color: #fff;
+                border-radius: .4cm;
+            }
         </style>
     </head>
     <body>
@@ -16,6 +22,7 @@
         <br>
         <br>
         <h2>rpicam v0</h2>
-        <p><code class="language-bash" data-lang="bash">git clone https://github.com/johannlo2013/picamera.git | echo "cd / | cd /home/mashedpotatoes/picamera | python3 init.py" > ~/Desktop/init.sh</span></code></p>
+        
+        <p><pre><code class="language-bash" data-lang="bash">git clone https://github.com/johannlo2013/picamera.git | echo "cd / | cd /home/mashedpotatoes/picamera | python3 init.py" > ~/Desktop/init.sh</span></code></pre></p>
     </body>
 </html>
