--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
                 font-family: 'Inter';
             }
             pre {
-                margin: 0 0 1em 0;
                 background: rgba(0, 0, 0, 0.3);
                 color: #fff;
                 border-radius: .4cm;
+                padding: 8px 10px;
             }
         </style>
     </head>
