--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 color: #fff;
                 border-radius: .4cm;
                 padding: 8px 10px;
+                width: 10cm;
             }
         </style>
     </head>
