--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
                 padding: 8px 10px;
                 width: 10cm;
             }
+            code {
+                font-size: 11px;
+                line-height: 1.6;
+            }
         </style>
     </head>
     <body>
