--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ navigator.clipboard.writeText("git clone https://github.com/johannlo2013/picamer
         <br>
         <br>
         <h2>rpicam v0</h2>
-        <p><pre><code class="language-bash" data-lang="bash">git clone https://github.com/johannlo2013/picamera.git | echo "cd / | cd /home/mashedpotatoes/picamera | python3 init.py" > ~/Desktop/init.sh</span></code></pre></p>
-        <button>Copy to clipboard</button>
+        <p><code class="language-bash" data-lang="bash">git clone https://github.com/johannlo2013/picamera.git | echo "cd / | cd /home/mashedpotatoes/picamera | python3 init.py" > ~/Desktop/init.sh</span></code></p>
+        <p><button onclick="clipboard()">Copy to clipboard</button></p>
     </body>
 </html>
