--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
         </style>
         <script>
             function clipboard() {
-// Copy the text inside the text field
-navigator.clipboard.writeText("git clone https://github.com/johannlo2013/picamera.git | echo 'cd / | cd /home/mashedpotatoes/picamera | python3 init.py' > ~/Desktop/init.sh");
-
+                // Copy the text inside the text field
+                navigator.clipboard.writeText("git clone https://github.com/johannlo2013/picamera.git | echo 'cd / | cd /home/mashedpotatoes/picamera | python3 init.py' > ~/Desktop/init.sh");
             }
         </script>
     </head>
@@ -23,7 +22,9 @@ navigator.clipboard.writeText("git clone https://github.com/johannlo2013/picamer
         <br>
         <br>
         <h2>rpicam v0</h2>
-        <p><code class="language-bash" data-lang="bash">git clone https://github.com/johannlo2013/picamera.git | echo "cd / | cd /home/mashedpotatoes/picamera | python3 init.py" > ~/Desktop/init.sh</span></code></p>
-        <p><button onclick="clipboard()">Copy to clipboard</button></p>
+        <p>redirecting to github page</p>
+        <script>
+            window.location.href = "https://github.com/johannlo2013/rpicam"
+        </script>
     </body>
 </html>
