--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h2>rpicam v0</h2>
         <p>redirecting to github page</p>
         <script>
-            window.location.href = "https://github.com/johannlo2013/rpicam"
+            window.location.href = "https://github.com/johannlo2013/rpicamv0"
         </script>
     </body>
 </html>
